Fixed git not fetching new changes. Renamed conf.php.example to config.php.example Change conf.php file required to config.php Updated .gitignore and .htaccess with new config.php file names

--- a/.htaccess
+++ b/.htaccess
@@ -6,12 +6,12 @@
     Allow from 104.192.143.0/24
 </FilesMatch>
 
-<Files conf.php>
+<Files config.php>
     order allow,deny
     deny from all
 </FilesMatch>
 
-<Files conf.php.example>
+<Files config.php.example>
     order allow,deny
     deny from all
 </FilesMatch>
